Added ability to disable Auto-Sync of mail, calendar, and contacts while tethered. Also, fixed a bug that would cause program to lose pre-tether wifi state if the program was exited and re-entered.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="logtext">Show log</string>
     <string name="installtext">(Re)-Install binaries/configs</string>
     <string name="aboutversion">Version 0.9.1_pre1</string>
+    <string name="sync_label">Disable Auto-Sync</string>
+    <string name="sync_summary">Disable Auto-Sync for mail, calendar, and contacts while tethered</string>
 </resources>
