--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="setuptext">Setup</string>
     <string name="abouttext">About</string>
     <string name="logtext">Show log</string>
+    <string name="savewhitelisttext">Save Whitelist</string>
     <string name="installtext">(Re)-Install binaries/configs</string>
     <string name="accesscontroltext">Access Control</string>
-    <string name="sync_label">Disable Auto-Sync</string>
-    <string name="sync_summary">Disable Auto-Sync for mail, calendar, and contacts while tethered</string>
+
     <string-array name="notificationmodevalues">  
 		<item>0</item>  
 		<item>1</item>  
