--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,15 +3,21 @@
 	<string name="global_application_name">Wireless Tether</string>
     <string name="main_activity_settings">Settings</string>
     <string name="main_activity_about">About</string>
+    <string name="main_activity_donate">Donate</string>
+    <string name="main_activity_close">Close</string>
+    <string name="main_activity_notroot">Not Root!</string>
+    <string name="main_activity_exit">Exit</string>
+    <string name="main_activity_ignore">Ignore</string>
+    <string name="main_activity_yes">Yes</string>
+    <string name="main_activity_no">No</string>
+    <string name="main_activity_ok">OK</string>
     <string name="main_activity_showlog">Show Log</string>
     <string name="main_activity_temperatureunit">°C</string>
     <string name="main_activity_accesscontrol">Access Control</string>
-    
     <string name="main_activity_start">Start Tethering</string>
     <string name="main_activity_start_summary">Please wait while starting...</string>
     <string name="main_activity_stop">Stop Tethering</string>
     <string name="main_activity_stop_summary">Please wait while stopping...</string> 
-    
     <string name="log_activity_nologfile">Unable to open log-File. File does not exist!</string>
     <string name="main_layout_presstostart">- Press to start tethering. -</string> 
     <string name="main_layout_presstostop">- Press to stop tethering. -</string> 
