--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="global_application_name">Wireless Tether</string>
+	<string name="global_application_installed">Binaries and config-files installed!</string>
+	<string name="global_application_error_restartsecwifi">"Unable to restart secured wifi!"</string>
     <string name="main_activity_settings">Settings</string>
     <string name="main_activity_about">About</string>
     <string name="main_activity_donate">Donate</string>
@@ -21,6 +23,8 @@
     <string name="log_activity_nologfile">Unable to open log-File. File does not exist!</string>
     <string name="main_layout_presstostart">- Press to start tethering. -</string> 
     <string name="main_layout_presstostop">- Press to stop tethering. -</string> 
+    <string name="main_layout_download">Download</string> 
+    <string name="main_layout_upload">Upload</string> 
     <string name="accesscontrol_activity_reloadclientlist">Reload Client-List</string>
     <string name="accesscontrol_activity_applysettings">Apply Settings</string>
     <string name="accesscontrol_layout_connectedclients">Connected/Authorized Clients:</string>
