--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,12 +2,23 @@
 <resources>
 	<string name="global_application_name">Wireless Tether</string>
 	<string name="global_application_installed">Binaries and config-files installed!</string>
-	<string name="global_application_error_restartsecwifi">"Unable to restart secured wifi!"</string>
+	<string name="global_application_error_restartsecwifi">Unable to restart secured wifi!</string>
+	<string name="global_application_tethering_running">Tethering is currently running ...</string>
+	<string name="global_application_accesscontrol_disabled">AC disabled</string>
+	<string name="global_application_accesscontrol_authorized">Authorized</string>
+	<string name="global_application_accesscontrol_unauthorized">Unauthorized</string>
+	
+	<string name="global_application_connected">connected</string>
+	
+	
     <string name="main_activity_settings">Settings</string>
     <string name="main_activity_about">About</string>
     <string name="main_activity_donate">Donate</string>
     <string name="main_activity_close">Close</string>
     <string name="main_activity_notroot">Not Root!</string>
+    <string name="main_activity_nonetfilter">No Netfilter!</string>
+    <string name="main_activity_noaccesscontrol">No Access Control!</string>
+    <string name="main_activity_accesscontrol_disabled">Access-Control disabled.</string>
     <string name="main_activity_exit">Exit</string>
     <string name="main_activity_ignore">Ignore</string>
     <string name="main_activity_yes">Yes</string>
@@ -18,6 +29,11 @@
     <string name="main_activity_accesscontrol">Access Control</string>
     <string name="main_activity_start">Start Tethering</string>
     <string name="main_activity_start_summary">Please wait while starting...</string>
+    <string name="main_activity_start_errors">Tethering started with errors! Please check \'Show log\'.</string>
+    <string name="main_activity_start_unable">Unable to start tethering. Please try again!</string>
+    <string name="main_activity_start_wiredtethering_running">Wired-tethering seems to be running at the moment. Please disable first!</string>
+    <string name="main_activity_start_usbtethering_running"><![CDATA[USB-tethering seems to be running at the moment. Please disable it first: Settings -> Wireless & network setting -> Internet tethering.]]></string>
+    <string name="main_activity_start_unknownstate">Your phone is currently in an unknown state - try to reboot!</string>
     <string name="main_activity_stop">Stop Tethering</string>
     <string name="main_activity_stop_summary">Please wait while stopping...</string> 
     <string name="log_activity_nologfile">Unable to open log-File. File does not exist!</string>
