--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,9 +63,23 @@
     <string name="setup_activity_restart_tethering_message">Please wait while restarting...</string>
     <string name="setup_activity_error_passphrase_invalidchars">Passphrase contains invalid characters, not saved!</string>
     <string name="setup_activity_error_passphrase_tooshort">Passphrase too short! New value was not saved.</string>
+    <string name="setup_activity_error_passphrase_toolong">Passphrase too long! New value was not saved.</string>
     <string name="setup_activity_error_restart_tethering">Unable to restart tethering!</string>
-    
-    
+    <string name="setup_activity_error_passphrase_info">Passphrase must be between 8 and 30 characters long!</string>
+	<string name="setup_activity_error_passphrase_13chars">Passphrase must be 13 characters (ASCII) long!</string>
+	<string name="setup_activity_error_ssid_invalidchars">SSID contains invalid characters</string>
+	<string name="setup_activity_error_ssid_empty">New SSID cannot be empty</string>
+	<string name="setup_activity_error_ssid_notsaved">, not saved.</string>
+	<string name="setup_activity_info_ssid_changedto">SSID changed to </string>
+	<string name="setup_activity_info_channel_changedto">SSID changed to </string>
+	<string name="setup_activity_info_passphrase_changedto">Passphrase changed to </string>
+	<string name="setup_activity_info_txpower_changedto">Transmit power changed to </string>
+	<string name="setup_activity_info_lan_changedto">LAN-network changed to </string>
+	<string name="setup_activity_info_wakelock_disabled">Wake-lock is now disabled.</string>
+	<string name="setup_activity_info_wakelock_enabled">Wake-lock is now enabled.</string>
+	<string name="setup_activity_info_accesscontrol_disabled">Access Control disabled.</string>
+	<string name="setup_activity_info_accesscontrol_enabled">Access Control enabled.</string>
+
 	<string name="setup_layout_category_bluetooth">Bluetooth</string>
 	<string name="setup_layout_category_wifi">Wifi</string>
 	<string name="setup_layout_category_security">Security</string>
