--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,7 +58,6 @@
 	<string name="accesscontrol_layout_enable">Enable</string>
 	<string name="accesscontrol_layout_disable">Disable</string>
     <string name="setup_activity_reinstall">(Re)-Install binaries/configs</string>
-
     <string name="setup_activity_restart_tethering_title">Restart Tethering</string>
     <string name="setup_activity_restart_tethering_message">Please wait while restarting...</string>
     <string name="setup_activity_error_passphrase_invalidchars">Passphrase contains invalid characters, not saved!</string>
@@ -71,7 +70,7 @@
 	<string name="setup_activity_error_ssid_empty">New SSID cannot be empty</string>
 	<string name="setup_activity_error_ssid_notsaved">, not saved.</string>
 	<string name="setup_activity_info_ssid_changedto">SSID changed to </string>
-	<string name="setup_activity_info_channel_changedto">SSID changed to </string>
+	<string name="setup_activity_info_channel_changedto">Channel changed to </string>
 	<string name="setup_activity_info_passphrase_changedto">Passphrase changed to </string>
 	<string name="setup_activity_info_txpower_changedto">Transmit power changed to </string>
 	<string name="setup_activity_info_lan_changedto">LAN-network changed to </string>
@@ -79,7 +78,6 @@
 	<string name="setup_activity_info_wakelock_enabled">Wake-lock is now enabled.</string>
 	<string name="setup_activity_info_accesscontrol_disabled">Access Control disabled.</string>
 	<string name="setup_activity_info_accesscontrol_enabled">Access Control enabled.</string>
-
 	<string name="setup_layout_category_bluetooth">Bluetooth</string>
 	<string name="setup_layout_category_wifi">Wifi</string>
 	<string name="setup_layout_category_security">Security</string>
@@ -159,6 +157,8 @@
 		<item>Unauthorized Clients</item>  
 		<item>All Clients</item>
 	</string-array>
+	
+	<!-- Below values don't need to be translated -->
     <string-array name="powermodevalues">  
 		<item>0</item>  
 		<item>1</item>  
